<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tVTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password_protection_usage_explanation"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tILPassphrase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content"
            android:hint="@string/enter_web_portal_password"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tVTitle"
            app:passwordToggleContentDescription="description"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTPassphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <ProgressBar
                android:id="@+id/pBarPassphraseQuality"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_margin_content_small"
                android:max="5"
                android:progress="0" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tVFollowRules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_should_fit_the_following_requirements"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tILPassphrase" />

        <CheckedTextView
            android:id="@+id/checkedTVMinLength"
            style="@style/AppWidget.CheckedTextView.Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_8_characters_length"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tVFollowRules" />

        <CheckedTextView
            android:id="@+id/checkedTVOneUppercase"
            style="@style/AppWidget.CheckedTextView.Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_uppercase"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/checkedTVMinLength" />

        <CheckedTextView
            android:id="@+id/checkedTVOneLowercase"
            style="@style/AppWidget.CheckedTextView.Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_lowercase"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/checkedTVOneUppercase" />

        <CheckedTextView
            android:id="@+id/checkedTVOneNumber"
            style="@style/AppWidget.CheckedTextView.Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_number"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/checkedTVOneLowercase" />

        <CheckedTextView
            android:id="@+id/checkedTVOneSpecialCharacter"
            style="@style/AppWidget.CheckedTextView.Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_special_character_eg"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/checkedTVOneNumber" />

        <Button
            android:id="@+id/btSetPassword"
            style="@style/AppWidget.Button.Big.SilverWithWhiteText"
            android:layout_width="0dp"
            android:text="@string/set_password"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/checkedTVOneSpecialCharacter" />

        <TextView
            android:id="@+id/tVLostPassphraseWarning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_big"
            android:layout_marginBottom="@dimen/default_margin_content"
            android:textAlignment="viewStart"
            android:textSize="@dimen/default_text_size_medium"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/btSetPassword"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/warning_about_password_usage" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_margin_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/default_margin_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_margin_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/default_margin_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
