...
    android:layout_height="@dimen/layout_height_message_item"
    android:background="@drawable/selector_msg_item"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:layout_marginBottom="@dimen/default_margin_content_small"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginBottom="@dimen/default_margin_content_small"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/itemSubTitleColor"
        android:textSize="@dimen/default_text_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/recyclerViewLabels"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
        app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
        tools:text="What up man" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLabels"
...
