...
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionChangeLabels"
        android:icon="@drawable/ic_label_24dp"
        android:title="@string/change_labels"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>

